app/globals.css
@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Mako&display=swap");

@tailwind base;
@tailwind components;
@tailwind utilities;

* {
  box-sizing: border-box;
}

@media (prefers-reduced-motion: no-preference) {
  html {
    scroll-behavior: smooth;
  }
}

/* --------------- Styling -------------- */

.text-stroke {
  -webkit-text-stroke: 1px #534646;
}

/* --------------- Animations -------------- */

@keyframes fadeIn {
  from {
    opacity: 0;
    transform: translateY(10px);
  }
  to {
    opacity: 1;
    transform: translateY(0px);
  }
}

.fadeIn {
  opacity: 0;
  animation-name: fadeIn;
  animation-fill-mode: forwards;
}

@keyframes fadeInUp {
  from {
    opacity: 0;
    transform: translateY(20px);
  }
  to {
    opacity: 1;
    transform: translateY(0);
  }
}

.fadeInUpPhoto {
  opacity: 0;
  animation: fadeInUp 0.5s forwards 1s;
}

.fadeInUpText {
  opacity: 0;
  animation: fadeInUp 0.5s forwards 1.5s;
}

@keyframes fadeDown {
  from {
    opacity: 0;
    transform: translateY(-30px);
  }
  to {
    opacity: 1;
    transform: translateY(0px);
  }
}

.fadeDown {
  opacity: 0;
  animation-name: fadeDown;
  animation-fill-mode: forwards;
}

.fadeDownTitle {
  opacity: 0;
  animation: fadeDown 0.5s forwards 0.3s;
}

@keyframes fadeDownFrom {
  from {
    opacity: 1;
    transform: translateY(0px);
  }
  to {
    opacity: 0;
    transform: translateY(1000px);
  }
}

.fadeDownFrom {
  opacity: 1;
  animation: fadeDownFrom 1s forwards;
}

@keyframes fadeDownFromAndOut {
  from {
    opacity: 0.3;
    width: 95%;
    z-index: 0;
    transform: translateY(0px);
  }
  to {
    opacity: 100;
    width: 112%;
    z-index: 10;
    transform: translateY(110px);
  }
}

.fadeDownFromAndOut {
  opacity: 0.3;
  width: 95%;
  z-index: 0;
  animation: fadeDownFromAndOut 0.5s forwards 0.2;
}

@keyframes fadeDownTab {
  from {
    transform: translateX(0px);
  }
  to {
    transform: translateX(55px);
  }
}

.fadeDownTab {
  animation: fadeDownTab 0.5s forwards 0.2;
}

@keyframes expandWidth {
  from {
    transform-origin: left;
    width: 0;
  }
  to {
    width: 100%;
  }
}

.expandWidthFirst {
  width: 0;
  animation: expandWidth 0.3s forwards;
}

.expandWidthSecond {
  width: 0;
  animation: expandWidth 0.8s forwards;
}

@keyframes expandHeight {
  from {
    transform-origin: bottom;
    height: 0;
  }
  to {
    height: 5%;
  }
}

.expandHeight {
  height: 0;
  animation: expandHeight 0.3s forwards 0.8s;
}

